--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@near-wallet-selector/core": "^7.1.0",
     "ava": "^4.3.3",
     "dotenv": "^16.0.3",
+    "keypom-js": "^1.2.0-rc.1",
     "near-api-js": "^0.44.2"
   },
   "ava": {
