--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@near-wallet-selector/core": "^7.7.0",
     "ava": "^4.3.3",
     "dotenv": "^16.0.3",
-    "keypom-js": "^1.2.1-rc.1",
+    "keypom-js": "^1.3.1",
     "near-api-js": "^0.44.2"
   },
   "ava": {
