--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@near-wallet-selector/core": "^7.7.0",
     "ava": "^4.3.3",
     "dotenv": "^16.0.3",
-    "keypom-js": "^1.3.1",
-    "near-api-js": "^0.44.2"
+    "keypom-js": "^1.3.4",
+    "near-api-js": "^0.44.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "ava": {
     "require": [
