--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,12 @@
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.16",
     "parcel": "^2.6.0",
+    "path-browserify": "^1.0.0",
     "process": "^0.11.10",
     "react-test-renderer": "^18.1.0",
     "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "util": "^0.12.3"
   },
   "dependencies": {
     "@near-wallet-selector/core": "^7.0.0",
